# MassSpecGym

./: .gitignore  README.md  setup.py
.github/workflows/: basic_ci.yml  prepare_submission.yml  review_submission.yml  update_leaderboard.yml
checkpoints/: README.md
data/: exclude_inchikeys.csv
massspecgym/data/: __init__.py  data_module.py  download.py  fp2mol_dataset.py  mist_data_mixin.py  mist_format.py  sanity_check.py  subformulae.py
massspecgym/mist/: __init__.py  checkpoint.py  chem_utils.py  encoder.py  featurizer.py  form_embedders.py  modules.py  msg_retrieval_dataset.py  transformer_layer.py
massspecgym/specbridge/: __init__.py  checkpoint.py  chemberta.py  dreams.py  embedding_store.py  mapper.py  spec_adapter.py
results/: de_novo.csv  de_novo_bonus.csv  retrieval.csv  retrieval_bonus.csv  simulation.csv  simulation_bonus.csv
scripts/: analyze_specbridge_peaks.py  convert_to_parquet.py  download_data.py  eval_mist_msg_retrieval.py  eval_specbridge_retrieval.py  generate_results_csvs.py  review_submission.py  run.py  specbridge_precompute_candidate_embeddings.py
scripts/leaderboard/: generate_results_csvs.py  massspecgym_leaderboard.py  review_submission.py
skills/implement/: SKILL.md
skills/review/: SKILL.md
submissions/: SUBMISSION_GUIDE.md
submissions/FRIGID/FRIGID/: .gitignore  .gitmodules  README.md  pyproject.toml
submissions/FRIGID/FRIGID/configs/: fp2mol_pretraining.yaml  spec2mol_benchmark_canopus.yaml  spec2mol_benchmark_msg.yaml
submissions/FRIGID/FRIGID/scripts/: benchmark_spec2mol.py  compute_metrics.py  multi_compute.py  run_scaling_multi_gpu.py  spec2mol_scaling.py  train.py
submissions/FRIGID/FRIGID/src/dlm/: bert_with_cross_attention.py  iceberg_sampler.py  model.py  model_components.py  sampler.py  spec2mol_model.py
submissions/FRIGID/FRIGID/src/dlm/utils/: __init__.py  benchmark_utils.py  checkpoint.py  formula_encoder.py  masking_utils.py  spec2mol.py  utils_chem.py  utils_data.py  utils_save.py  validation_callback.py
submissions/FRIGID/FRIGID/src/mist/: __init__.py
submissions/FRIGID/FRIGID/src/mist/data/: __init__.py  datasets.py  featurizers.py  hdf5_dataset.py  iceberg_dataset.py  spec2mol_dataset.py
submissions/FRIGID/FRIGID/src/mist/models/: __init__.py  form_embedders.py  transformer_layer.py
submissions/FRIGID/FRIGID/src/mist/utils/: parse_utils.py
submissions/FRIGID/FRIGID/token_models/: README.md  benchmark_token_models.py  download_pubchem.sh  generate_training_data.py  token_utils.py  train_opt_canopus.py  train_opt_canopus_pubchem.py  train_opt_msg.py  train_opt_msg_pubchem.py
submissions/MBGen/MBGen/: README.md  pyproject.toml
submissions/MBGen/MBGen/configs/: config.yaml
submissions/MBGen/MBGen/configs/dataset/: canopus.yaml  fp2mol.yaml  msg.yaml
submissions/MBGen/MBGen/configs/general/: general_default.yaml
submissions/MBGen/MBGen/configs/model/: model_default.yaml
submissions/MBGen/MBGen/configs/train/: train_default.yaml
submissions/MBGen/MBGen/data_processing/: 00_download_fp2mol_data.sh  01_download_canopus_data.sh  02_download_msg_data.sh  03_preprocess_fp2mol.sh  build_fp2mol_datasets.py
submissions/MBGen/MBGen/src/: diffusion_model_fp2mol.py  diffusion_model_spec2mol.py  fp2mol_main.py  spec2mol_main.py
submissions/MBGen/MBGen/src/datasets/: spec2mol_dataset.py
submissions/MBGen/MBGen/src/diffusion/: diffusion_utils.py  extra_features.py
submissions/MBGen/MBGen/src/many_body/: layers.py  many_body_attn.py
submissions/MBGen/MBGen/src/metrics/: mbgen_metrics.py  molecular_metrics_discrete.py  train_metrics.py
submissions/MBGen/MBGen/src/mist/models/: form_embedders.py  modules.py  spectra_encoder.py
submissions/MBGen/MBGen/src/models/: mb_transformer.py
submissions/MIST-MolForge-wrong/MIST-MolForge-wrong/: .gitignore  pyproject.toml
submissions/MIST-MolForge-wrong/MIST-MolForge-wrong/MolForge/MolForge/: decoder.py
submissions/MIST-MolForge-wrong/MIST-MolForge-wrong/configs/: spec2mol_benchmark_canopus.yaml  spec2mol_benchmark_msg.yaml
submissions/MIST-MolForge-wrong/MIST-MolForge-wrong/src/mist/: __init__.py
submissions/MIST-MolForge-wrong/MIST-MolForge-wrong/src/mist/data/: __init__.py  data.py  splitter.py
submissions/MIST-MolForge-wrong/MIST-MolForge-wrong/src/mist/models/: transformer_layer.py
submissions/MIST-MolForge-wrong/MIST-MolForge-wrong/src/mist/utils/: chem_utils.py
submissions/MIST-MolForge-wrong/MIST-MolForge-wrong/src/mist_molforge/: __init__.py  chem_utils.py  metrics.py
submissions/foam/foam/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_opt.py  setup.cfg  setup.py
submissions/foam/foam/configs/final/: msg_pubchem_diffms_1500calls.yaml  nist20_7.5calls.yaml
submissions/foam/foam/data/isomer_candidates/: C14H20N2O2.txt  C22H20O10.txt
submissions/foam/foam/postprocessing/: fig_functions.py  plots.ipynb  plotting_style.py  process_steps.py  regressor.py
submissions/foam/foam/preprocessing/isomer_candidates/: 01_download_smiles.sh  02_make_formula_subsets.py  03_make_isomer_file.py  04_select_population_seeds.py
submissions/foam/foam/run_scripts/graph_ga_fc/: run_hyperopt.sh  run_optimization.sh
submissions/foam/foam/src/foam/: __init__.py  base_opt.py  base_parsing.py  base_run_hyperopt.py  base_run_opt.py  evaluators.py  oracles.py
submissions/foam/foam/src/foam/opt_graph_ga_fc/: README.md  crossover.py  graph_ga_fc.py  mutate.py  run_hyperopt_graph_ga_fc.py  run_opt.py
submissions/foam/foam/src/foam/utils/: __init__.py  chem_utils.py  misc_utils.py  parallel_utils.py  plotting_utils.py  server_utils.py
tests/: test_fp2mol_v15.py  test_v15_data_oracles.py
(+278 files in other folders)
