[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mist-molforge"
readme = "README.md"
version = "0.1.0"
description = "Minimal MIST plus MolForge benchmark repository"
authors = [{ name = "anonymous", email = "xxx@xxx" }]
requires-python = ">=3.10"
license = { file = "LICENSE/license_code.txt" }
dependencies = [
    'torch==2.6.0',
    'numpy==1.26.4',
    'pandas==2.1.0',
    'pyyaml>=6.0',
    'tqdm>=4.66',
    'joblib>=1.3',
    'rdkit>=2023.9.6',
    'sentencepiece>=0.2.0'
]

[project.optional-dependencies]
mces = ['pulp>=2.8', 'myopic-mces']

[project.scripts]
mist-molforge-benchmark = "mist_molforge.benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = true
