[build-system]
requires = ["setuptools>=64", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "ms-gen-foam"
version = "0.1.0"
description = "A package for computational tandem mass spectrometry simulation."
authors = [
    { name = "Mrunali Manjrekar", email = "mrunali@mit.edu" },
    { name = "Runzhong Wang", email = "rwang@mit.edu"},
    { name = "Sam Goldman", email = "samlg@mit.edu"},
]
readme = "README.md"
requires-python = ">=3.10"

# Core dependencies (torch/dgl are in extras based on hardware)
dependencies = [
    "cairosvg",
    "cython>=3.1.3",
    "einops>=0.8.1",
    "h5py",
    "ipdb>=0.13.13",
    "jpype1",
    "lightgbm>=4.6.0",
    "matplotlib",
    "myopic-MCES",
    "msbuddy>=0.3.12",
    "omegaconf>=2.3.0",
    "pathos>=0.3.4",
    "pip",
    "pubchempy>=1.0.4",
    "plotly",
    "pygmtools",
    "pymoo",
    "pytorch-lightning",
    "rdkit>=2023.9.6",
    "scikit-learn",
    "seaborn>=0.13.2",
    "setuptools",
    "wandb==0.21.0",
    "wandb-osh",
]

[project.optional-dependencies]
# Install with: uv pip install -e ".[cpu]"
cpu = [
    "torch==2.4.0",
    "torchvision==0.19.0",
    "torchaudio==2.4.0",
    "dgl",
    "torch-scatter",
    "torch-sparse",
]
# Install with: uv pip install -e ".[cuda]"
cuda = [
    "torch==2.4.0",
    "torchvision==0.19.0",
    "torchaudio==2.4.0",
    "dgl==2.4.0",
    # Update cp tag (cp310/cp311/cp312) and versions as needed
    "torch-scatter @ https://data.pyg.org/whl/torch-2.4.0%2Bcu121/torch_scatter-2.1.2+pt24cu121-cp310-cp310-linux_x86_64.whl",
    "torch-sparse @ https://data.pyg.org/whl/torch-2.4.0%2Bcu121/torch_sparse-0.6.18+pt24cu121-cp310-cp310-linux_x86_64.whl",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
find-links = [
    "https://data.pyg.org/whl/torch-2.4.0+cpu.html",
    "https://data.pyg.org/whl/torch-2.4.0+cu121.html",
    "https://data.dgl.ai/wheels/repo.html",
    "https://data.dgl.ai/wheels/torch-2.4/cu121/repo.html",
]

[tool.setuptools.packages.find]
where = ["src"]
